k8s/simple_contour/web/web.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
  namespace: default
  labels:
    env: dev
    owner: smarkin
spec:
  progressDeadlineSeconds: 600
  # replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: web-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: web-app
    spec:
      containers:
      - image:  simple_app:0.0.3
        imagePullPolicy: IfNotPresent
        name: web-app
        ports:
        - containerPort: 8080
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    env: dev
    owner: smarkin
  name: web-app
spec:
  # clusterIP: 10.109.37.17 to specify IP into cluster
  # externalTrafficPolicy: Cluster
  ports:
  - name: listener
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: web-app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app
  labels:
    app.kubernetes.io/name: web-app
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: "/web-app"
            pathType: Prefix
            backend:
              service:
                name: web-app
                port:
                  number: 8080
